--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ markdown: kramdown
 name: Pennsylvania Budget Clock
 url: http://pabudgetclock.com
 title: Pennsylvania Budget Clock
-description: "Pennsylvania has languished without a budget for"
+description: "Pennsylvania's new budget is due in"
 encoding: utf-8
 timezone: America/Chicago
